# sirius-operator

./: .dockerignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/sirius_operator/: __main__.py  main.py
src/sirius_operator/rest/: app.py
src/sirius_platform_operator/: __main__.py  main.py  state.py
src/sirius_platform_operator/rest/: app.py
tests/unit/: test_main.py  test_state.py
